--- a/css/main.css
+++ b/css/main.css
@@ -900,10 +900,21 @@ body {
 
 /* SKILLS */
 .skill-unit {
- 	padding-bottom: 1.1em; padding-right: 32px;
+ 	    padding-bottom: 1.1em;
+    padding-right: 32px;
+    display: inline-block;
 	}
 	.skill-unit h4 {
- 		margin: 0 0 4px 0; font-weight: 400; font-size: 14px; position: relative; z-index: 100; padding-left: 0px;
+ 		margin: 0 0 4px 0;
+    font-weight: 400;
+    font-size: 14px;
+    position: relative;
+    z-index: 100;
+    padding: 0.25em 1em;
+    display: inline-block;
+    width: auto;
+    border-radius: 0.5em;
+    border: 1px solid;
 		}
 	.skill-unit .bar {
 		position: relative; width: 100%; height: 8px;
